[metadata]
name = osc-ccloud-server-group-member-changes
summary = OpenStackClient plugin for changing members of server-groups
description-file =
    README.md
author = Johannes Kulik
author-email = johannes.kulik@sap.com
home-page = https://github.com/sapcc/osc-ccloud-server-group-member-changes
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    osc_ccloud_server_group_member_changes

[entry_points]
openstack.cli.extension =
    ccloud_server_group_member_changes = osc_ccloud_server_group_member_changes.plugin

openstack.ccloud_server_group_member_changes.v1 =
    server_group_add_members = osc_ccloud_server_group_member_changes.commands:AddMembers
    server_group_remove_members = osc_ccloud_server_group_member_changes.commands:RemoveMembers
